@@ -1,5 +1,7 @@
-//dragonhide				(160/5) flexible and strong, each type should confer some resistance
-//meteoric steel (darker than steel)	(150) stronger than steel, weaker than spider silk
-//arcanite (orange)			(180) between meteoric steel and mithril
-//illithium (white)			(225) between mithril and sapphire/ruby
-//adamant (adj: adamantine) (white)	(350) between diamond and valpurium
+//dragonhide				flexible and strong, each type should confer some resistance
+//meteoric steel (darker than steel)	stronger than steel, weaker than spider silk
+//arcanite (orange)			between meteoric steel and mithril
+//illithium (white)			between mithril and sapphire/ruby
+//adamant (adj: adamantine) (white)	between diamond and valpurium
+octiron (black)				very magical
+sapient pearwood			used to create items that magically follow their owner
